--- a/chart.html
+++ b/chart.html
@@ -11,6 +11,15 @@
     <link rel="stylesheet" href="assets/vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="shortcut icon" href="assets/images/faces/face1.png" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XJGY0X5BTS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XJGY0X5BTS');
+</script>
   </head>
   <body>
     <div class="container-scroller">
@@ -219,7 +228,7 @@
       </div>
    <footer class="footer">
     <div class="container-fluid d-flex justify-content-between">
-      <span class="text-muted d-block text-center text-sm-start d-sm-inline-block">Trần Văn Hảo</span>
+      <span class="text-muted d-block text-center text-sm-start d-sm-inline-block">Trần Văn Hảo <a href="//www.dmca.com/Protection/Status.aspx?ID=a0524fc4-a601-443f-8cd0-818adab31d54" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca-badge-w100-5x1-08.png?ID=a0524fc4-a601-443f-8cd0-818adab31d54"  alt="DMCA.com Protection Status" /></a>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script></span>
     </div>
   </footer>
   <script src="assets/vendors/js/vendor.bundle.base.js"></script>
